# RepoKai

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns
crates/gui/src/: lib.rs  main.rs
crates/gui/ui/: index.html  package.json
crates/gui/ui/src/: main.ts  style.css
crates/tui/: Cargo.toml
crates/tui/src/: main.rs  render.rs
