[package]
name = "repokai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "GitHub API layer for RepoKai: fetch your repositories and READMEs, publish, clone, and edit repos (octocrab-based)"
keywords = ["github", "api", "repository"]
categories = ["api-bindings"]

[dependencies]
octocrab = "0.49"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
