[package]
name = "repokai-gui"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "repokai_gui"

[dependencies]
repokai-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
