[package]
name = "repokai-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "repokai"
path = "src/main.rs"

[dependencies]
repokai-core = { path = "../core" }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
